--- a/html5up-forty/main.html
+++ b/html5up-forty/main.html
@@ -27,12 +27,15 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="landing.html">Company Information</a></li>
+							<li><a href="generic.html">Surgery Information</a></li>
+							<li><a href="elements.html">Reservation</a></li>
+							<li><a href="elements.html">Board</a></li>
+							<li><a href="elements.html">My page</a></li>
+
 						</ul>
 						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Get Started</a></li>
+							<li><a href="#" class="button special fit">About Waxing?</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
@@ -41,18 +44,18 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>Welcome To Kururu WaxingShop</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>전 세계 곳곳에 체인점을 가지고 있는 세계 최대 규모 왁싱 샵<br />
+								꾸루루 왁싱샵입니다. 정성을 다해 모시겠습니다.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">시작하기</a></li>
 								</ul>
 							</div>
 						</div>
 							<span class="image">
-								<img src="images/giphy02.gif" alt="" />
+								<img src="images/skin4.gif" alt="" />
 							</span>
 
 					</section>
@@ -66,8 +69,8 @@
 										<img src="images/skin1.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">About Waxing?</a></h3>
+										<p>왁싱을 했을때의 좋은 점</p>
 									</header>
 								</article>
 								<article>
@@ -75,8 +78,8 @@
 										<img src="images/skin2.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">센터 내부</a></h3>
+										<p>항상 고객을 위해 쾌적한 환경을 제공합니다.</p>
 									</header>
 								</article>
 								<article>
@@ -84,8 +87,8 @@
 										<img src="images/skin3.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link">시술 예약</a></h3>
+										<p>시술 목록확인 및 시술 예약을 도와 드립니다.</p>
 									</header>
 								</article>
 								<article>
@@ -93,8 +96,8 @@
 										<img src="images/skin4.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="landing.html" class="link">예약 현황</a></h3>
+										<p>회원님의 현재까지 받은 시술 내역 및 예약현황입니다.</p>
 									</header>
 								</article>
 								<article>
@@ -102,8 +105,8 @@
 										<img src="images/skin5.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">My Page</a></h3>
+										<p>회원님의 정보를 수정, 삭제 그리고 샵의 이용 내역입니다.</p>
 									</header>
 								</article>
 								<article>
