--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="wrapper" >
       <header id="header" class="alt">
-        <a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+        <a href="index.html" class="logo"><strong>Kururu</strong> <span>waxingShop</span></a>
         <nav>
-          <a href="#">HELLO</a>
+          <a href="#">made By Rick</a>
         </nav>
       </header>
 
