--- a/html5up-forty/main.html
+++ b/html5up-forty/main.html
@@ -17,11 +17,11 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Kururu</strong> <span>waxingShop</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
-					</header
+					</header>
 
 				<!-- Menu -->
 					<nav id="menu">
@@ -55,7 +55,7 @@
 							</div>
 						</div>
 							<span class="image">
-								<img src="images/skin4.gif" alt="" />
+								<img src="images/banner7.gif" alt="" />
 							</span>
 
 					</section>
@@ -66,7 +66,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/skin1.jpg" alt="" />
+										<img src="images/tile01.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">About Waxing?</a></h3>
@@ -75,16 +75,16 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/skin2.jpg" alt="" />
+										<img src="images/tile02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">센터 내부</a></h3>
-										<p>항상 고객을 위해 쾌적한 환경을 제공합니다.</p>
+										<h3><a href="landing.html" class="link">센터 소개</a></h3>
+										<p>센터의 소개 및 이용 방법을 알려드립니다.</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/skin3.jpg" alt="" />
+										<img src="images/tile03.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">시술 예약</a></h3>
@@ -93,7 +93,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/skin4.jpg" alt="" />
+										<img src="images/tile04.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">예약 현황</a></h3>
@@ -102,7 +102,16 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/skin5.jpg" alt="" />
+										<img src="images/tile05.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="landing.html" class="link">이용 후기</a></h3>
+										<p>고객님들의 시술 후기입니다.</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/tile06.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">My Page</a></h3>
@@ -111,11 +120,20 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/tile07.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">매출관리</a></h3>
+										<p>운영자 전용 메뉴입니다.</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/tile06.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="landing.html" class="link">관리 페이지</a></h3>
+										<p>회원정보, 메뉴 등 홈페이지의 관리를 위한 페이지입니다.</p>
 									</header>
 								</article>
 							</section>
@@ -132,13 +150,13 @@
 									</ul>
 								</div>
 							</section>
-
 					</div>
 
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
 							<section>
+								<h2>1:1 Comment</h2>
 								<form method="post" action="#">
 									<div class="field half first">
 										<label for="name">Name</label>
@@ -163,14 +181,14 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">dreamx119@gmail.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>010-8546-9119</span>
 									</div>
 								</section>
 								<section>
@@ -190,14 +208,12 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.facebook.com/GuruGuruMon" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://github.com/Rick00Kim" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Kururu WaxingShop Made by Rick</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
