--- a/html5up-forty/main.html
+++ b/html5up-forty/main.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Kururu</strong> <span>waxingShop</span></a>
+						<a href="main.html" class="logo"><strong>Kururu</strong> <span>waxingShop</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -27,15 +27,14 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Company Information</a></li>
+							<li><a href="landing.html">Center Information</a></li>
 							<li><a href="generic.html">Surgery Information</a></li>
 							<li><a href="elements.html">Reservation</a></li>
-							<li><a href="elements.html">Board</a></li>
+							<li><a href="elements.html">Review Waxing</a></li>
 							<li><a href="elements.html">My page</a></li>
-
 						</ul>
 						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">About Waxing?</a></li>
+							<li><a href="aboutWaxing.html" class="button special fit">About Waxing?</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
@@ -69,7 +68,7 @@
 										<img src="images/tile01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">About Waxing?</a></h3>
+										<h3><a href="aboutWaxing.html" class="link">About Waxing?</a></h3>
 										<p>왁싱을 했을때의 좋은 점</p>
 									</header>
 								</article>
@@ -111,7 +110,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/tile06.jpg" alt="" />
+										<img src="images/tile08.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">My Page</a></h3>
@@ -129,7 +128,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/tile06.jpg" alt="" />
+										<img src="images/tile08.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">관리 페이지</a></h3>
