--- a/html5up-forty/aboutWaxing.html
+++ b/html5up-forty/aboutWaxing.html
@@ -45,10 +45,10 @@
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style6">
+					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/tile06.jpg" alt="" />
+								<img src="images/tile001.jpg" alt="" />
 							</span>
 							<header class="major">
 								<h1>About Waxing?</h1>
@@ -81,7 +81,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="comment01.html" class="image">
-										<img src="images/tile06.jpg" alt="" data-position="center center" />
+										<img src="images/tile001.jpg" alt="" data-position="center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -90,14 +90,14 @@
 											</header>
 											<p>모델이나 왁싱을 본래부터 해 오던 특수 목적의 직업군만이 왁싱을 했지만, 최근에는 그 계층이 확산 되고 있다.</p>
 											<ul class="actions">
-												<li><a href="comment01.html" class="button">자세히</a></li>
+												<li><a href="comment01.html" class="button special fit">자세히</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/temp01.jpg" alt="" data-position="top center" />
+										<img src="images/temp01.jpg" alt="" data-position="center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -106,14 +106,14 @@
 											</header>
 											<p>성감도 증진, 청결 유지, 여성 염증 감소</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">자세히</a></li>
+												<li><a href="generic.html" class="button special fit">자세히</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/temp02.jpg" alt="" data-position="25% 25%" />
+										<img src="images/temp02.jpg" alt="" data-position="center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -122,7 +122,7 @@
 											</header>
 											<p>남녀 성비가 여성쪽이 높았던 인식을 부수고 최근에는 남자의 비율도 대폭 증가하고 있습니다.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">자세히</a></li>
+												<li><a href="generic.html" class="button special fit">자세히</a></li>
 											</ul>
 										</div>
 									</div>
