--- a/html5up-forty/main.html
+++ b/html5up-forty/main.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>KURURU WAXINGSHOP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -27,7 +27,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Center Information</a></li>
+							<li><a href="center_information.html">Center Information</a></li>
 							<li><a href="generic.html">Surgery Information</a></li>
 							<li><a href="elements.html">Reservation</a></li>
 							<li><a href="elements.html">Review Waxing</a></li>
@@ -77,7 +77,7 @@
 										<img src="images/tile02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">센터 소개</a></h3>
+										<h3><a href="center_information.html" class="link">센터 소개</a></h3>
 										<p>센터의 소개 및 이용 방법을 알려드립니다.</p>
 									</header>
 								</article>
@@ -110,7 +110,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/tile08.jpg" alt="" />
+										<img src="images/tile06.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">My Page</a></h3>
@@ -141,11 +141,12 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>꾸루루 왁싱샵만의 장점</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>꾸루루 왁싱샵은 항상 회원님의 편의를 생각하고 Waxing 입문자에게는 철저히 비밀 유지와 처음 시도하는 부담감 없이 원할히 시술 받을 수 있도록 도와드립니다.<br/>
+										그리고, 회원님의 철저한 관리와 다양한 서비스를 제공하고자 노력하겠습니다.   감사합니다.</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
+										<li><a href="landing.html" class="button next">회원가입 하기</a></li>
 									</ul>
 								</div>
 							</section>
@@ -155,7 +156,8 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<h2>1:1 Comment</h2>
+								<h1>1:1 Comment</h1>
+								<h5>궁금하신 점이 있으시면 메세지를 보내주십시오.</h5>
 								<form method="post" action="#">
 									<div class="field half first">
 										<label for="name">Name</label>
@@ -194,9 +196,9 @@
 									<div class="contact-method">
 										<span class="icon alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<span>계룡로 825 동화빌딩 5F<br />
+										대전광역시 중구 <br />
+										Republic of Korea</span>
 									</div>
 								</section>
 							</section>
@@ -216,7 +218,6 @@
 							</ul>
 						</div>
 					</footer>
-
 			</div>
 
 		<!-- Scripts -->
