--- a/html5up-forty/main.html
+++ b/html5up-forty/main.html
@@ -11,10 +11,8 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
-
 		<!-- Wrapper -->
 			<div id="wrapper">
-
 				<!-- Header -->
 					<header id="header" class="alt">
 						<a href="main.html" class="logo"><strong>Kururu</strong> <span>waxingShop</span></a>
@@ -86,7 +84,7 @@
 										<img src="images/tile03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">시술 예약</a></h3>
+										<h3><a href="surgeryList.html" class="link">시술 예약</a></h3>
 										<p>시술 목록확인 및 시술 예약을 도와 드립니다.</p>
 									</header>
 								</article>
@@ -95,7 +93,7 @@
 										<img src="images/tile04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">예약 현황</a></h3>
+										<h3><a href="reservationList.html" class="link">예약 현황</a></h3>
 										<p>회원님의 현재까지 받은 시술 내역 및 예약현황입니다.</p>
 									</header>
 								</article>
@@ -104,7 +102,7 @@
 										<img src="images/tile05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">이용 후기</a></h3>
+										<h3><a href="reviewBoard.html" class="link">이용 후기</a></h3>
 										<p>고객님들의 시술 후기입니다.</p>
 									</header>
 								</article>
@@ -113,7 +111,7 @@
 										<img src="images/tile06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">My Page</a></h3>
+										<h3><a href="memberinfomation.html" class="link">My Page</a></h3>
 										<p>회원님의 정보를 수정, 삭제 그리고 샵의 이용 내역입니다.</p>
 									</header>
 								</article>
@@ -122,7 +120,7 @@
 										<img src="images/tile07.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">매출관리</a></h3>
+										<h3><a href="stastic_company.html" class="link">매출관리</a></h3>
 										<p>운영자 전용 메뉴입니다.</p>
 									</header>
 								</article>
