--- a/html5up-forty/reviewBoard.html
+++ b/html5up-forty/reviewBoard.html
@@ -42,89 +42,33 @@
 					</ul>
 				</nav>
 
-				<!-- Main -->
-				<div id="main" class="alt">
-					<!-- One -->
-					<section id="one">
-						<div class="inner">
-							<header class="major">
-								<h1>꾸루루 왁싱샵 시술 내용</h1>
-							</header>
-						<!--Menu List Start-->
-						<div class="row" >
-						<div class="6u 12u$(small) spotlights">
-							<header class="major">
-								<h3>Man Surgery</h3>
-							</header>
-							<section style="background-color: #c1a2a2; ">
-									<img src="images/man_AllNude.jpg" width="90" class="image" alt="" data-position="center"/>
-								<div class="content">
-									<div class="inner">
-										<header class="major">
-											<h5>man_AllNude</h5>
-										</header>
-										<p></p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button small">예약하기</a></li>
-										</ul>
-									</div>
-								</div>
-							</section>
-							<br>
-							<section>
-									<img src="images/man_Strip.jpg" width="90" class="image" alt="" data-position="center center" />
-								<div class="content">
-									<div class="inner">
-										<header class="major">
-											<h5>man_Strip</h5>
-										</header>
-										<p></p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button small">예약하기</a></li>
-										</ul>
-									</div>
-								</div>
-							</section>
-						</div>
-						<div class="6u 12u$(small) spotlights">
-							<header class="major">
-								<h3>Woman Surgery</h3>
-							</header>
-							<section>
-
-									<img src="images/woman_AllNude.jpg" width="90" class="image" alt="" data-position="center center" />
-
-								<div class="content">
-									<div class="inner">
-										<header class="major">
-											<h5>woman_AllNude</h5>
-										</header>
-										<p></p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button small">예약하기</a></li>
-										</ul>
-									</div>
-								</div>
-							</section>
-							<br>
-							<section>
-									<img src="images/woman_Strip.jpg" width="90" class="image" alt="" data-position="center" />
-								<div class="content">
-									<div class="inner">
-										<header class="major">
-											<h5>woman_Strip</h5>
-										</header>
-										<p></p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button small">예약하기</a></li>
-										</ul>
-									</div>
-								</div>
-							</section>
+				<section id="banner" class="style5">
+					<div class="inner">
+						<span class="image">
+							<img src="images/tile00.jpg" alt="" />
+						</span>
+						<header class="major">
+							<h1>회원님들의 시술 후기</h1>
+						</header>
+						<div class="content">
+							<p>아직 Waxing에 대해 고민이 있으신가요?<br />
+							다른 회원님들의 후기를 보시고 직접 판단하세요.</p>
 						</div>
 					</div>
+				</section>
+				<!-- Main -->
+				<div id="main" class="alt">
+					<div class="inner row">
+						<div class="3u 12u$(small)" style="background-color:blacknavy; width:450px;">
+							<div>
+								<img src="images/tile02.jpg" width="350" height="auto"alt="">
+							</div>
+							<div>
+								<h3>안녕하세요</h3>
+								<p>인사드립니다.</p>
+							</div>
 						</div>
-					</section>
+					</div>
 				</div>
 				<!-- Footer -->
 				<footer id="footer">
