--- a/html5up-forty/center_information.html
+++ b/html5up-forty/center_information.html
@@ -19,31 +19,31 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 				<!-- Header -->
-					<header id="header">
-						<a href="main.html" class="logo"><strong>Kururu</strong> <span>waxingShop</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="center_information.html">Center Information</a></li>
-							<li><a href="generic.html">Surgery Information</a></li>
-							<li><a href="elements.html">Reservation</a></li>
-							<li><a href="elements.html">Review Waxing</a></li>
-							<li><a href="elements.html">My page</a></li>
-						</ul>
-						<ul class="actions vertical">
-							<li><a href="aboutWaxing.html" class="button special fit">About Waxing?</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
+				<header id="header" class="alt">
+					<a href="main.html" class="logo"><strong>Kururu</strong> <span>waxingShop</span></a>
+					<nav>
+						<a href="#menu">Menu</a>
 					</nav>
+				</header>
+
+			<!-- Menu -->
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="center_information.html">Center Information</a></li>
+						<li><a href="surgeryList.html">Surgery Information</a></li>
+						<li><a href="reservationList.html">Reservation</a></li>
+						<li><a href="reviewList.html">Review Waxing</a></li>
+						<li><a href="mypage.html">My page</a></li>
+					</ul>
+					<ul class="actions vertical">
+						<li><a href="aboutWaxing.html" class="button special fit">About Waxing?</a></li>
+						<li><a href="login.html" class="button fit">Log In</a></li>
+					</ul>
+				</nav>
 
 				<!-- Main -->
-					<div id="main">
+					<div id="main" class="alt">
 
 						<!-- One -->
 							<section id="one">
