--- a/html5up-forty/main.html
+++ b/html5up-forty/main.html
@@ -26,14 +26,14 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="center_information.html">Center Information</a></li>
-							<li><a href="generic.html">Surgery Information</a></li>
-							<li><a href="elements.html">Reservation</a></li>
-							<li><a href="elements.html">Review Waxing</a></li>
-							<li><a href="elements.html">My page</a></li>
+							<li><a href="surgeryList.html">Surgery Information</a></li>
+							<li><a href="reservationList.html">Reservation</a></li>
+							<li><a href="reviewList.html">Review Waxing</a></li>
+							<li><a href="mypage.html">My page</a></li>
 						</ul>
 						<ul class="actions vertical">
 							<li><a href="aboutWaxing.html" class="button special fit">About Waxing?</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="login.html" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
 
