--- a/html5up-forty/comment01.html
+++ b/html5up-forty/comment01.html
@@ -20,8 +20,8 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-				<header id="header">
-					<a href="index.html" class="logo"><strong>Kururu</strong> <span>waxingShop</span></a>
+				<header id="header" class="alt">
+					<a href="main.html" class="logo"><strong>Kururu</strong> <span>waxingShop</span></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -31,15 +31,15 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="landing.html">Center Information</a></li>
-						<li><a href="generic.html">Surgery Information</a></li>
-						<li><a href="elements.html">Reservation</a></li>
-						<li><a href="elements.html">Board</a></li>
-						<li><a href="elements.html">My page</a></li>
+						<li><a href="center_information.html">Center Information</a></li>
+						<li><a href="surgeryList.html">Surgery Information</a></li>
+						<li><a href="reservationList.html">Reservation</a></li>
+						<li><a href="reviewList.html">Review Waxing</a></li>
+						<li><a href="mypage.html">My page</a></li>
 					</ul>
 					<ul class="actions vertical">
 						<li><a href="aboutWaxing.html" class="button special fit">About Waxing?</a></li>
-						<li><a href="#" class="button fit">Log In</a></li>
+						<li><a href="login.html" class="button fit">Log In</a></li>
 					</ul>
 				</nav>
 
