--- a/html5up-forty/reservationList.html
+++ b/html5up-forty/reservationList.html
@@ -54,6 +54,27 @@
 										<h2>예약 현황</h2>
 									</header>
 								</div>
+								<div class="row">
+									<div class="6u 12u$(small) table-wrapper">
+										<table>
+											<tr>
+												<th>주문내용</th>
+												<th>주문금액</th>
+												<th>주문자</th>
+												<th>주문일자</th>
+											</tr>
+											<tr>
+												<td>Heart</td>
+												<td>100000</td>
+												<td>a01</td>
+												<td>2017-09-21</td>
+											</tr>
+										</table>
+									</div>
+									<div class="6u 12u$(small)">
+
+									</div>
+							</div>
 						</section>
 					</section>
 			</div>
